# orihime

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  MOSS_RESULT.md  README.md  docker-compose.yml  glama.json  pyproject.toml  pytest.ini  server.json  smithery.yaml
.claude/: settings.json  task-graph.md
.github/scripts/: orihime_review.py
.github/workflows/: orihime-cleanup.yml  orihime-index.yml  orihime-review.yml
actions/cleanup/: action.yml
actions/index/: action.yml
actions/review/: action.yml
dedalus/: __main__.py  complexity_pass.py  cross_resolver.py  indexer.py  java_extractor.py  js_extractor.py  kotlin_extractor.py  license_checker.py  mcp_server.py  parse_result.py  resolver.py  schema.py  security_config.py  ui_server.py  walker.py  write_client.py  write_server.py
docs/: adding-a-language.md  backlog.md  ci-integration.md  docker.md  extractors.md  mcp-server.md  resolver.md  security-config.md
docs/decisions/: 01-tech-stack.md  02-schema.md  03-language-extensibility.md  04-cross-repo-resolution.md  05-mcp-server.md  06-testing-strategy.md  07-legal-and-licensing.md
examples/github-actions/: orihime-cleanup.yml  orihime-index.yml  orihime-review.yml
indra/: __main__.py  cross_resolver.py  indexer.py  java_extractor.py  kotlin_extractor.py  language.py  mcp_server.py  parse_result.py  path_utils.py  resolver.py  schema.py  security_config.py  ui_server.py  walker.py
orihime/: __main__.py  cross_resolver.py  framework_pass.py  indexer.py  io_fanout_pass.py  java_extractor.py  js_extractor.py  kotlin_extractor.py  language.py  license_checker.py  mcp_server.py  parse_result.py  perf_ingest.py  resolver.py  schema.py  security_config.py  ui_server.py  walker.py  write_client.py  write_server.py
tests/: test_framework_pass.py
tests/fixtures/: ArrayAnnotationController.java  ArrayAnnotationController.kt  CallChain.java  ComponentAdapter.java  ConstantEndpoints.java  ConstructorCalls.java  ConstructorCalls.kt  DICallerClass.java  ExtensionFunctions.kt  InheritanceChain.java  InheritanceExternal.java  InheritanceGeneric.java  InheritanceKotlin.kt  InheritanceSimple.java  JpaEntities.java  KotlinDataClass.kt  KotlinObjects.kt  LombokBuilderClass.java  LombokDataClass.java  NoLombokClass.java  NonServiceImpl.java  RepositoryImpl.java  Sample.java  SampleController.kt  ServiceDataClass.java  StaticFieldCalls.java  VirtualDispatch.java  WalletController.java  WalletControllerDI.java  WalletService.java  WalletServiceImpl.java
tests/integration/: test_controller_di_e2e.py  (+9 more)
(+51 files in other folders)
