[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "orihime"
version = "1.9.2"
description = "Cross-repository code knowledge graph for Java/Kotlin/JS/TS — MCP server, web UI, CLI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "kuzu>=0.6",
    "tree-sitter>=0.23",
    "tree-sitter-java>=0.23",
    "tree-sitter-kotlin>=0.3",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "mcp[cli]>=1.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
]

[project.scripts]
orihime = "orihime.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["orihime*"]

[tool.setuptools.package-data]
orihime = ["skills/**/*"]
