[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "orihime"
version = "1.9.2"
description = "Cross-repository code knowledge graph for Java/Kotlin/JS/TS — MCP server, web UI, CLI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["mcp", "mcp-server", "model-context-protocol", "code-analysis", "call-graph", "taint-analysis", "sast", "java", "kotlin", "javascript", "typescript", "kuzudb", "tree-sitter", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/srinivasan-sundaresan95/orihime"
Repository = "https://github.com/srinivasan-sundaresan95/orihime"
"Bug Tracker" = "https://github.com/srinivasan-sundaresan95/orihime/issues"
dependencies = [
    "kuzu>=0.6",
    "tree-sitter>=0.23",
    "tree-sitter-java>=0.23",
    "tree-sitter-kotlin>=0.3",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "mcp[cli]>=1.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
]

[project.scripts]
orihime = "orihime.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["orihime*"]

[tool.setuptools.package-data]
orihime = ["skills/**/*"]
